FIX: Remove overflow on ticket row

--- a/src/app/helpdesk/states/dashboard/dashboard.scss
+++ b/src/app/helpdesk/states/dashboard/dashboard.scss
@@ -80,7 +80,6 @@
   // Ticket Row
   .ticket.row {
     justify-content: center;
-    overflow-x: hidden;
   }
   // Helpdesk Closed
   .helpdesk-closed {
